<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgDashHead"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/dash_head_cropped"/>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/hind_madurai_bold"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/txtSubTitle"
        android:layout_below="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitle"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/hind_madurai_regular"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/txtSubTitle2"
        android:layout_below="@+id/txtSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitle2"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/hind_madurai_regular"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edtSearchQuery"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="145dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/hind_madurai_regular"
        android:drawableEnd="@drawable/search_icon_drawable_layer_list"
        android:background="@drawable/fragments_view_background"
        android:hint="@string/looking_for"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dashboardRecyclerView"
        android:layout_below="@+id/edtSearchQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        />


</RelativeLayout>