<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">
        <ImageView
            android:id="@+id/imgLeaderBoardx"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:scaleType="fitXY"
            android:src="@drawable/leaderboard_bg"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.8"/>

            <ImageView
                android:id="@+id/crownImage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_crown"
                android:layout_weight="0.3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"/>


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/secondPlaceImage"
                        android:layout_width="50dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1.2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:text="@string/secondName"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/hind_madurai_regular"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:layout_gravity="center"
                        android:text="@string/pointsSecond"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/hind_madurai_regular"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/firstPlaceImage"
                        android:layout_width="50dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1.2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:fontFamily="@font/hind_madurai_regular"
                        android:text="@string/firstName"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:text="@string/pointsFirst"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/hind_madurai_regular"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.8"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/thirdPlaceImage"
                        android:layout_width="50dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1.2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:text="@string/thirdName"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/hind_madurai_regular"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:text="@string/pointsThird"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/hind_madurai_regular"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.3"/>



                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.9"/>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leaderboardRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@drawable/recyclerview_background_view"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/txtLeaderBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_leaderboard"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/hind_madurai_bold"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:textSize="22sp"/>


</RelativeLayout>